--- a/public/css/board.css
+++ b/public/css/board.css
@@ -68,7 +68,8 @@ html, body {
 	left: 80%;
 	height: 20%;
 	width: 20%;
-	background: pink;
+	background: #400;
+	color: white;
 }
 #timer table {
 	width: 100%;
